# EMR-adapter-service

./: .gitignore  Dockerfile  accuro_REST_api.json  pyproject.toml
.github/workflows/: deploy.yml
accuro_adapter/: __init__.py  api.py  client.py  models.py  requirements.txt
infra/: main.tf  outputs.tf  variables.tf
tests/: test_client.py
tests/fixtures/: appointment_cancel.json  appointment_get.json
