[project]
name = "accuro_adapter"
version = "0.1.0"
description = "Async Accuro EMR adapter service"
authors = [{ name = "Chris", email = "christopher@clinicline.com" }] 
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "respx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["accuro_adapter*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
